--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,49 @@
 title: "Escape Goat"
 description: "Naperville's Premier Rock Cover Band"
-theme: minima
+url: "https://tonyperona.github.io/escape-goat-site" # Change if you add a custom domain
+remote_theme: "mmistakes/minimal-mistakes@4.27.3"
+
+# Plugins
+plugins:
+  - jekyll-include-cache
+
+# Author info
+author:
+  name: "Escape Goat"
+  avatar: "/assets/images/band-avatar.jpg"
+  bio: "Serving up classic and modern rock covers with a side of goat puns."
+  location: "Naperville, IL"
+  links:
+    - label: "Instagram"
+      icon: "fab fa-instagram"
+      url: "https://instagram.com/escapegoatband"
+    - label: "Facebook"
+      icon: "fab fa-facebook"
+      url: "https://facebook.com/escapegoatband"
+    - label: "YouTube"
+      icon: "fab fa-youtube"
+      url: "https://youtube.com/@escapegoatband"
+
+# Navigation
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: single
+      author_profile: true
+
+# Collections
+collections:
+  shows:
+    output: true
+    permalink: /shows/:path/
+
+# Theme settings
+minimal_mistakes_skin: "contrast" # Bold, high-contrast look
+paginate: 5
+paginate_path: "/page:num/"
+
+# Social sharing
+twitter:
+  username: escapegoatband
