--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ plugins:
 # Author info
 author:
   name: "Escape Goat"
-  avatar: "/assets/images/band-avatar.jpg"
+  avatar: "/assets/images/escapegote-logo.png"
   bio: "Serving up classic and modern rock covers with a side of goat puns."
   location: "Naperville, IL"
   links:
